<?xml version="1.0" encoding="UTF-8"?>
<!--
  ========================================================================
   Smart Supply Pro — Inventory Service (Spring Boot / Maven)
   Goals:
     • Keep versions centrally managed and linter-friendly
     • Pin specific components to patched levels for CVE remediation
     • Preserve standard Spring Boot conventions
  Notes:
     • We use BOTH a parent (spring-boot-starter-parent) and an explicit
       import of spring-boot-dependencies BOM to satisfy IDE linters.
     • Security pins (properties) propagate to all Spring Security modules.
     • Framework pin ensures spring-core and friends are patched.
  ========================================================================
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

  <!-- Managed by Spring Boot parent; plugins and defaults come from here -->
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.5.15</version>
    <relativePath/>
  </parent>

  <!-- Module coordinates -->
  <groupId>com.smartsupplypro</groupId>
  <artifactId>inventory-service</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>Inventory Service</name>
  <description>Inventory Service Pro</description>

  <!--
    Central overrides (kept minimal, only where needed):
      - tomcat.version            : patched for reported CVEs
      - spring-security.version   : 6.5.4 (CVE-2025-41248 fix)
      - spring-framework.version  : 6.2.11 (CVE-2025-41249 fix)
  -->
  <properties>
    <java.version>17</java.version>
    <tomcat.version>10.1.55</tomcat.version>
    <spring-security.version>6.5.4</spring-security.version>
    <spring-framework.version>6.2.11</spring-framework.version>
    <!-- Override Spring Boot managed Jackson BOM to address Trivy finding GHSA-72hv-8253-57qq -->
    <jackson-bom.version>2.21.1</jackson-bom.version>
  </properties>

  <!--
    Explicit BOM import:
      - Makes dependency management visible to IDE linters.
      - Works alongside the parent; the import is the same BOM (3.5.15).
      - Property overrides above are honored by this BOM.
  -->
  <dependencyManagement>
    <dependencies>
      <!-- Override Jackson versions consistently (Trivy: GHSA-72hv-8253-57qq) -->
      <dependency>
        <groupId>com.fasterxml.jackson</groupId>
        <artifactId>jackson-bom</artifactId>
        <version>${jackson-bom.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>3.5.15</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <!-- ===== CVE pin overrides (take precedence over BOM) ===== -->
      <!-- Force Spring Security core to 6.5.4 (fixes CVE-2025-41248) -->

      <!-- Force Spring Framework core to 6.2.11 (fixes CVE-2025-41249) -->
      <!-- ============================================================== -->
    </dependencies>
  </dependencyManagement>

  <!-- Application dependencies (versions omitted—managed by BOM) -->
  <dependencies>
    <!-- Spring Boot starters -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-oauth2-client</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>

    <!-- Devtools (runtime only, optional) -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
      <scope>runtime</scope>
      <optional>true</optional>
    </dependency>

    <!-- Oracle JDBC / Wallet -->
    <dependency>
      <groupId>com.oracle.database.security</groupId>
      <artifactId>oraclepki</artifactId>
    </dependency>
    <dependency>
      <groupId>com.oracle.database.security</groupId>
      <artifactId>osdt_core</artifactId>
      <version>21.19.0.0</version>
    </dependency>
    <dependency>
      <groupId>com.oracle.database.security</groupId>
      <artifactId>osdt_cert</artifactId>
      <version>21.19.0.0</version>
    </dependency>
    <dependency>
      <groupId>com.oracle.database.jdbc</groupId>
      <artifactId>ojdbc11</artifactId>
      <scope>runtime</scope>
    </dependency>

    <!-- Config processor & Lombok -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-configuration-processor</artifactId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <optional>true</optional>
    </dependency>

    <!-- Spring Session -->
    <dependency>
      <groupId>org.springframework.session</groupId>
      <artifactId>spring-session-core</artifactId>
    </dependency>

    <!-- Test stack -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-testcontainers</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>oracle-free</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <!-- Build plugins -->
  <build>
    <plugins>
      <!-- Java compiler (retain parameter names; annotation processors wired) -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <parameters>true</parameters>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
            </path>
            <path>
              <groupId>org.springframework.boot</groupId>
              <artifactId>spring-boot-configuration-processor</artifactId>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>

      <!-- JaCoCo coverage at verify phase -->
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.12</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <phase>verify</phase>
            <goals>
              <goal>report</goal>
            </goals>
            <configuration>
              <dataFile>${project.build.directory}/jacoco.exec</dataFile>
              <outputDirectory>${project.build.directory}/site/jacoco</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <!-- Spring Boot repackage -->
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <excludes>
            <exclude>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
            </exclude>
          </excludes>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
